# M_blas

./: CHANGELOG.md  LICENSE  README.md  STATUS.md  ford.md  fpm.toml  index.html  run.sh  search.html
.github/workflows/: test_gfortran_msys_windows.yml
docs/: BOOK_M_blas.html  M_blas.js  _Users_julielangou_Documents_GitHub_lapack_BLAS_.3.html  _Users_julielangou_Documents_GitHub_lapack_BLAS_SRC_.3.html  aux_blas.3.html  blas.3.html  blastesting.3.html  caxpy.3m_blas.html  ccopy.3m_blas.html  ccopy.ffinc.3m_blas.html  cdotc.3m_blas.html  cdotc.ffinc.3m_blas.html  cdotu.3m_blas.html  cdotu.ffinc.3m_blas.html  cgbmv.3m_blas.html  cgbmv.ffinc.3m_blas.html  cgemm.3m_blas.html  cgemm.ffinc.3m_blas.html  cgemv.3m_blas.html  cgemv.ffinc.3m_blas.html  cgerc.3m_blas.html  cgerc.ffinc.3m_blas.html  cgeru.3m_blas.html  cgeru.ffinc.3m_blas.html  chbmv.3m_blas.html  chbmv.ffinc.3m_blas.html  chemm.3m_blas.html  chemm.ffinc.3m_blas.html  chemv.3m_blas.html  chemv.ffinc.3m_blas.html  cher.3m_blas.html  cher.ffinc.3m_blas.html  cher2.3m_blas.html  cher2.ffinc.3m_blas.html  cher2k.3m_blas.html  cher2k.ffinc.3m_blas.html  cherk.3m_blas.html  cherk.ffinc.3m_blas.html  chpmv.3m_blas.html  chpmv.ffinc.3m_blas.html  (+298 more)
docs/fpm-ford/: index.html  search.html
docs/fpm-ford/interface/: xerbla_interface.html
docs/fpm-ford/lists/: absint.html  files.html  modules.html  procedures.html  programs.html
docs/fpm-ford/module/: m_blas.html
docs/fpm-ford/proc/: caxpy.html  caxpy~2.html  cbeg.html  cbeg~2.html  cbeg~3.html  cbeg~4.html  cchk1.html  cchk1~2.html  cchk1~3.html  cchk1~4.html  cchk2.html  cchk2~2.html  cchk2~3.html  cchk2~4.html  cchk3.html  cchk3~2.html  cchk3~3.html  cchk3~4.html  cchk4.html  cchk4~2.html  cchk4~3.html  cchk4~4.html  cchk5.html  cchk5~2.html  cchk5~3.html  cchk5~4.html  cchk6.html  cchk6~2.html  cchke.html  cchke~2.html  cchke~3.html  cchke~4.html  ccopy.html  cdotc.html  cdotc~2.html  cdotu.html  cdotu~2.html  cgbmv.html  cgemm.html  cgemm~2.html  (+553 more)
docs/fpm-ford/program/: cblat1.html  cblat1~2.html  cblat2.html  cblat2~2.html  cblat3.html  cblat3~2.html  dblat1.html  dblat1~2.html  dblat2.html  dblat2~2.html  (+14 more)
interface/: xerbla_interface.html
lists/: absint.html  files.html  modules.html  procedures.html
module/: m_blas.html
proc/: caxpy.html  caxpy~2.html  ccopy.html  cdotc.html  cdotu.html  cgbmv.html  cgemm.html  cgemv.html  cgerc.html  cgeru.html  chbmv.html  chemm.html  chemv.html  cher.html  cher2.html  cher2k.html  cherk.html  chpmv.html  chpr.html  chpr2.html  crotg.html  cscal.html  csrot.html  csscal.html  cswap.html  csymm.html  csyr2k.html  csyrk.html  ctbmv.html  ctbsv.html  ctpmv.html  ctpsv.html  ctrmm.html  ctrmv.html  ctrsm.html  ctrsv.html  dasum.html  daxpy.html  dcabs1.html  dcopy.html  (+114 more)
search/: search_database.json
sourcefile/: compatible.f90.html
src/: CMakeLists.txt  M_blas.f90  Makefile  Makefile.old  caxpy.finc  ccopy.finc  cdotc.finc  cdotu.finc  cgbmv.finc  cgemm.finc  cgemv.finc  cgerc.finc  cgeru.finc  chbmv.finc  chemm.finc  chemv.finc  cher.finc  cher2.finc  cher2k.finc  cherk.finc  chpmv.finc  chpr.finc  chpr2.finc  compatible.f90  crotg.finc  cscal.finc  csrot.finc  csscal.finc  cswap.finc  csymm.finc  csyr2k.finc  csyrk.finc  ctbmv.finc  ctbsv.finc  ctpmv.finc  ctpsv.finc  ctrmm.finc  ctrmv.finc  ctrsm.finc  ctrsv.finc  (+116 more)
src/source/: caxpy.ffinc  ccopy.ffinc  cdotc.ffinc  cdotu.ffinc  cgbmv.ffinc  cgemm.ffinc  cgemv.ffinc  cgerc.ffinc  cgeru.ffinc  chbmv.ffinc  chemm.ffinc  chemv.ffinc  cher.ffinc  cher2.ffinc  cher2k.ffinc  cherk.ffinc  chpmv.ffinc  chpr.ffinc  chpr2.ffinc  crotg.ffinc  cscal.ffinc  csrot.ffinc  csscal.ffinc  cswap.ffinc  csymm.ffinc  csyr2k.ffinc  csyrk.ffinc  ctbmv.ffinc  ctbsv.ffinc  ctpmv.ffinc  ctpsv.ffinc  ctrmm.ffinc  ctrmv.ffinc  ctrsm.ffinc  ctrsv.ffinc  dasum.ffinc  daxpy.ffinc  dcabs1.ffinc  dcopy.ffinc  ddot.ffinc  (+111 more)
test/: cblat2.f  cblat2.in  cblat2_a.f90  cblat3.f  cblat3.in  cblat3_a.f90  dblat1_a.f90  dblat2.f  dblat2.in  dblat2_a.f90  dblat3.f  dblat3.in  dblat3_a.f90  sblat2.f  sblat2.in  sblat2_a.f90  sblat3.f  sblat3.in  sblat3_a.f90  test_xerbla.inc  test_xerbla.inc90  x  zblat1.f  zblat2.f  zblat2.in  zblat2_a.f90  zblat3.f  zblat3.in  zblat3_a.f90
tipuesearch/: tipuesearch_content.js
(+42 files in other folders)
